<resources>
    <string name="app_name">CalcExpert</string>
    <string name="enter_fnumber">Enter First Number</string>
    <string name="enter_snumber">Enter Second Number</string>
    <string name="add">Addition</string>
    <string name="sub">Subtraction</string>
    <string name="div">Division</string>
    <string name="mul">Multiplication</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings">Settings</string>
    <string name="cls">Close</string>

    <!-- Theme Options for Light/Dark Mode -->
        <string-array name="theme_options">
            <item>Light</item>
            <item>Dark</item>
        </string-array>
        <string-array name="theme_values">
            <item>light</item>
            <item>dark</item>
        </string-array>

        <!-- Decimal Places Options -->
        <string-array name="decimal_place_options">
            <item>1</item>
            <item>2</item>
            <item>3</item>
            <item>4</item>
        </string-array>
        <string-array name="decimal_place_values">
            <item>1</item>
            <item>2</item>
            <item>3</item>
            <item>4</item>
        </string-array>
</resources>